import pytest

from sparv_statistics import suc_msd

SUC_MSD_FREQ: dict[str, int] = {
    "NN.NEU.SIN.DEF.NOM": 59061,
    "NN.NEU.SIN.IND.NOM": 110212,
    "RG.NOM": 180310,
    "MID": 101646,
    "PM.NOM": 102747,
    "NN.UTR.SIN.IND.NOM": 185208,
    "KN": 117948,
    "VB.PRS.AKT": 184442,
    "SN": 53560,
    "NN.UTR.SIN.DEF.NOM": 123357,
    "PP": 358838,
    "DT.NEU.SIN.IND": 19816,
    "HP.-.-.-": 40259,
    "VB.SUP.SFO": 5290,
    "PL": 15486,
    "AB.POS": 15452,
    "NN.UTR.PLU.DEF.NOM": 25975,
    "PC.PRF.NEU.SIN.IND.NOM": 5665,
    "NN.NEU.PLU.DEF.GEN": 864,
    "NN.UTR.PLU.IND.NOM": 101252,
    "MAD": 131026,
    "DT.UTR+NEU.PLU.DEF": 14188,
    "PC.PRF.UTR+NEU.PLU.IND+DEF.NOM": 13568,
    "NN.NEU.PLU.DEF.NOM": 12372,
    "NN.UTR.SIN.DEF.GEN": 14776,
    "VB.PRS.SFO": 35885,
    "AB": 70456,
    "VB.SUP.AKT": 14926,
    "NN.UTR.PLU.DEF.GEN": 3430,
    "NN.NEU.SIN.DEF.GEN": 7186,
    "JJ.POS.UTR+NEU.SIN.DEF.NOM": 16664,
    "NN.NEU.PLU.IND.NOM": 43022,
    "JJ.POS.UTR+NEU.PLU.IND+DEF.NOM": 43460,
    "AB.AN": 22440,
    "JJ.POS.NEU.SIN.IND.NOM": 17527,
    "PC.PRS.UTR+NEU.SIN+PLU.IND+DEF.NOM": 15494,
    "NN.AN": 37351,
    "VB.INF.AKT": 95313,
    "DT.UTR.SIN.IND": 34408,
    "IE": 45393,
    "JJ.POS.UTR.SIN.IND.NOM": 31584,
    "VB.INF.SFO": 19930,
    "JJ.POS.UTR+NEU.PLU.IND.NOM": 4953,
    "HA": 13218,
    "PN.NEU.SIN.DEF.SUB+OBJ": 45180,
    "PS.UTR+NEU.PLU.DEF": 1976,
    "JJ.KOM.UTR+NEU.SIN+PLU.IND+DEF.NOM": 10870,
    "DT.UTR.SIN.DEF": 17851,
    "PS.UTR+NEU.SIN+PLU.DEF": 1418,
    "NN.UTR.-.-.SMS": 4845,
    "PC.PRF.UTR.SIN.IND.NOM": 9691,
    "PAD": 93999,
    "AB.SUV": 3889,
    "DT.NEU.SIN.DEF": 9677,
    "JJ.POS.UTR+NEU.SIN+PLU.IND+DEF.NOM": 3307,
    "PN.UTR+NEU.SIN+PLU.DEF.OBJ": 11049,
    "PN.UTR+NEU.PLU.DEF.SUB+OBJ": 558,
    "PS.UTR.SIN.DEF": 3894,
    "PN.UTR.SIN.DEF.SUB+OBJ": 3143,
    "AB.KOM": 8987,
    "HP.NEU.SIN.IND": 3996,
    "RO.NOM": 2892,
    "DT.UTR+NEU.SIN.IND": 834,
    "VB.PRT.AKT": 19251,
    "HP.UTR+NEU.PLU.IND": 205,
    "HD.UTR+NEU.PLU.IND": 823,
    "PN.UTR+NEU.PLU.DEF.OBJ": 1393,
    "PC.PRF.UTR+NEU.SIN.DEF.NOM": 2723,
    "PM.GEN": 3258,
    "JJ.POS.UTR+NEU.PLU.IND+DEF.GEN": 230,
    "JJ.SUV.UTR+NEU.SIN+PLU.DEF.NOM": 2228,
    "PN.NEU.SIN.IND.SUB+OBJ": 2581,
    "DT.UTR+NEU.SIN+PLU.IND": 1170,
    "NN.UTR.PLU.IND.GEN": 3134,
    "JJ.SUV.UTR+NEU.PLU.DEF.NOM": 187,
    "PN.UTR+NEU.PLU.DEF.SUB": 3700,
    "PM.SMS": 10,
    "PN.UTR.SIN.IND.SUB+OBJ": 1931,
    "JJ.SUV.UTR+NEU.SIN+PLU.IND.NOM": 296,
    "JJ.SUV.UTR+NEU.PLU.IND.NOM": 28,
    "NN.NEU.SIN.IND.GEN": 699,
    "NN.UTR.SIN.IND.GEN": 2338,
    "NN.NEU.PLU.IND.GEN": 1057,
    "VB.PRT.SFO": 3293,
    "DT.UTR+NEU.PLU.IND+DEF": 2269,
    "VB.IMP.AKT": 1765,
    "PN.UTR.SIN.DEF.OBJ": 840,
    "PN.UTR+NEU.PLU.IND.SUB+OBJ": 2621,
    "PN.UTR.PLU.DEF.SUB": 11788,
    "UO": 2274,
    "HP.UTR.SIN.IND": 262,
    "PS.NEU.SIN.DEF": 2345,
    "JJ.POS.UTR.SIN.IND+DEF.NOM": 430,
    "PP.AN": 10,
    "PN.UTR.SIN.IND.SUB": 4040,
    "VB.AN": 28,
    "JJ.POS.MAS.SIN.DEF.NOM": 268,
    "DT.UTR+NEU.PLU.IND": 1026,
    "PN.UTR.PLU.DEF.OBJ": 1022,
    "NN.-.-.-.-": 206,
    "IN": 840,
    "HD.NEU.SIN.IND": 164,
    "JJ.POS.NEU.SIN.IND+DEF.NOM": 375,
    "DT.UTR.SIN.IND+DEF": 241,
    "PN.UTR.SIN.DEF.SUB": 8164,
    "HD.UTR.SIN.IND": 420,
    "DT.NEU.SIN.IND+DEF": 144,
    "VB.KON.PRT.AKT": 118,
    "NN.UTR.-.-.-": 199,
    "JJ.POS.MAS.SIN.DEF.GEN": 95,
    "JJ.AN": 20,
    "VB.KON.PRS.AKT": 44,
    "HS.DEF": 186,
    "RG.SMS": 11,
    "PN.MAS.SIN.DEF.SUB+OBJ": 31,
    "DT.MAS.SIN.DEF": 1,
    "PC.PRF.MAS.SIN.DEF.NOM": 41,
    "PC.PRF.MAS.SIN.DEF.GEN": 18,
    "PC.PRF.UTR+NEU.PLU.IND+DEF.GEN": 12,
    "JJ.POS.UTR+NEU.SIN.DEF.GEN": 29,
    "KN.AN": 24,
    "JJ.SUV.MAS.SIN.DEF.NOM": 1,
    "RO.MAS.SIN.IND+DEF.NOM": 5,
    "DT.UTR+NEU.SIN.DEF": 6,
}


@pytest.mark.parametrize("msd", list(SUC_MSD_FREQ))
def test_parse(msd: str, snapshot) -> None:
    answer = suc_msd.parse(msd)

    assert answer == snapshot
